ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item_ext, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item_ext, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    expression_item: $ => seq(
      $._sequence_expression_ext,
      repeat($.item_attribute)
    ),

    _signature: $ => choice(
      repeat1(';;'),
      seq(repeat1(seq(repeat(';;'), $._signature_item_ext)), repeat(';;'))
    ),

    // Toplevel

    toplevel_directive: $ => seq(
      $.directive,
      optional(choice(
        $._constant,
        $.value_path,
        $.module_path
      ))
    ),

    // Module implementation

    external: $ => seq(
      'external',
      optional($._attribute),
      $._value_name,
      $._typed,
      '=',
      repeat1($.string),
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $._type_constructor),
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            field('body', choice($.variant_declaration, $.record_declaration, '..'))
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', $._type_param))
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type_ext
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        alias(choice(seq('[', ']'), seq('(', ')'), 'true', 'false'), $.constructor_name)
      ),
      optional(choice(
        seq('of', $._constructor_argument),
        $._simple_typed,
        seq(':', $._constructor_argument, '->', field('type', $._simple_type_ext)),
        seq('=', $.constructor_path)
      ))
    ),

    _constructor_argument: $ => choice(
      sep1('*', $._simple_type_ext),
      $.record_declaration
    ),

    record_declaration: $ => seq(
      '{',
      sep1(';', $.field_declaration),
      optional(';'),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      $._polymorphic_typed,
    ),

    type_constraint: $ => seq(
      'constraint',
      $._type_ext,
      '=',
      $._type_ext
    ),

    exception_definition: $ => seq(
      'exception',
      optional($._attribute),
      $.constructor_declaration,
      repeat($.item_attribute)
    ),

    module_definition: $ => seq(
      'module', optional($._attribute), optional('rec'),
      sep1('and', $.module_binding)
    ),

    module_binding: $ => seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      repeat($.module_parameter),
      optional($._module_typed),
      optional(seq('=', field('body', $._module_expression_ext))),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      $._module_typed
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._attribute),
      field('name', $._module_type_name),
      optional(seq('=', field('body', $._module_type_ext))),
      repeat($.item_attribute)
    ),

    open_module: $ => seq(
      'open',
      optional('!'),
      optional($._attribute),
      $._module_expression_ext,
      repeat($.item_attribute)
    ),

    value_specification: $ => seq(
      'val',
      optional($._attribute),
      $._value_name,
      $._typed,
      repeat($.item_attribute)
    ),

    _module_typed: $ => seq(':', $._module_type_ext),

    _module_type_ext: $ => choice(
      $._module_type,
      $._extension
    ),

    signature: $ => seq(
      'sig',
      optional($._signature),
      'end'
    ),

    module_type_constraint: $ => prec.right(seq(
      $._module_type_ext,
      'with',
      sep1('and', choice($.constrain_type, $.constrain_module))
    )),

    constrain_type: $ => seq(
      'type',
      optional($._type_params),
      $.type_constructor_path,
      $._type_equation,
      repeat($.type_constraint)
    ),

    constrain_module: $ => seq(
      'module',
      $.module_path,
      choice('=', ':='),
      $.extended_module_path
    ),

    module_type_of: $ => seq(
      'module', 'type', 'of',
      $._module_expression_ext
    ),

    functor_type: $ => prec.right(seq(
      choice(
        seq('functor', repeat($.module_parameter)),
        $._module_type_ext
      ),
      '->',
      $._module_type_ext
    )),

    parenthesized_module_type: $ => seq(
      parenthesize($._module_type_ext)
    ),

    // Module expressions

    _module_expression_ext: $ => choice(
      $._module_expression,
      $._extension
    ),

    _typed: $ => seq(':', $._type_ext),

    _simple_typed: $ => seq(':', $._simple_type_ext),

    _polymorphic_typed: $ => seq(':', $._polymorphic_type),

    _simple_type_ext: $ => choice(
      $._simple_type,
      $._extension
    ),

    _type_ext: $ => choice(
      $._type,
      $._extension
    ),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type_ext,
        parenthesize(sep1(',', $._type_ext))
      ),
      $.type_constructor_path
    )),

    _sequence_expression_ext: $ => choice(
      $._sequence_expression,
      $._extension
    ),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case)
    )),

    match_case: $ => seq(
      field('pattern', $._pattern_ext),
      optional($.guard),
      '->',
      field('body', choice($._sequence_expression_ext, $.refutation_case))
    ),

    function_expression: $ => prec.right(PREC.match, seq(
      'function',
      optional($._attribute),
      $._match_cases
    )),

    _pattern_ext: $ => choice(
      $._pattern,
      $._extension
    ),

    alias_pattern: $ => prec.left(PREC.match, seq(
      $._pattern_ext,
      'as',
      $._value_pattern
    )),

    typed_pattern: $ => seq(
      parenthesize(seq(
        $._pattern_ext,
        $._typed
      ))
    ),

    or_pattern: $ => prec.left(PREC.seq, seq(
      $._pattern_ext,
      '|',
      $._pattern_ext
    )),

    constructor_pattern: $ => prec.right(PREC.app, seq(
      $.constructor_path,
      $._pattern_ext
    )),

    tag_pattern: $ => prec.right(PREC.app, seq(
      $.tag,
      $._pattern_ext
    )),

    polymorphic_variant_pattern: $ => seq(
      '#',
      $.type_constructor_path
    ),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._pattern_ext,
      ',',
      $._pattern_ext
    )),

    record_pattern: $ => prec.left(seq(
      '{',
      sep1(';', $.field_pattern),
      optional(seq(';', '_')),
      optional(';'),
      '}'
    )),

    field_pattern: $ => seq(
      $.field_path,
      optional($._typed),
      optional(seq('=', $._pattern_ext))
    ),

    list_pattern: $ => prec.left(seq(
      '[',
      optional(seq(
        sep1(';', $._pattern_ext),
        optional(';')
      )),
      ']'
    )),

    cons_pattern: $ => prec.right(PREC.cons, seq(
      $._pattern_ext,
      '::',
      $._pattern_ext
    )),

    array_pattern: $ => prec.left(seq(
      '[|',
      optional(seq(
        sep1(';', $._pattern_ext),
        optional(';')
      )),
      '|]'
    )),

    range_pattern: $ => prec(PREC.dot, seq(
      $._signed_constant,
      '..',
      $._signed_constant
    )),

    lazy_pattern: $ => prec(PREC.hash, seq(
      'lazy',
      optional($._attribute),
      $._pattern_ext
    )),

    local_open_pattern: $ => seq(
      $.module_path,
      '.',
      choice(
        parenthesize(optional($._pattern_ext)),
        $.list_pattern,
        $.array_pattern,
        $.record_pattern
      )
    ),

    package_pattern: $ => parenthesize(seq(
      'module',
      optional($._attribute),
      choice($._module_name, alias('_', $.module_name)),
      optional($._module_typed)
    )),

    parenthesized_pattern: $ => parenthesize($._pattern_ext),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _constant: $ => choice(
      $.number,
      $.character,
      $.string,
      $.quoted_string,
      $.boolean,
      $.unit
    ),

    _signed_constant: $ => choice(
      $._constant,
      $.signed_number
    ),

    number: $ => NUMBER,

    signed_number: $ => seq(
      choice('+', '-'),
      NUMBER
    ),

    character: $ => seq(
      "'",
      choice(
        /[^\\']/,
        $._null,
        $.escape_sequence
      ),
      "'"
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        token.immediate(' '),
        token.immediate('[@'),
        token.immediate('[@@'),
        token.immediate('[@@@'),
        /[^\\"%@]+|%|@/,
        $._null,
        $.escape_sequence,
        alias(/\\u\{[0-9A-Fa-f]+\}/, $.escape_sequence),
        alias(/\\\n[\t ]*/, $.escape_sequence),
        $.conversion_specification,
        $.pretty_printing_indication
      )),
      '"'
    ),

    quoted_string: $ => seq(
      '{',
      $._quoted_string,
      '}'
    ),

    boolean: $ => choice('true', 'false'),

    unit: $ => choice(
      seq('(', ')'),
      seq('begin', 'end')
    ),

    // Operators

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    _value_pattern: $ => choice(
      alias($._identifier, $.value_pattern),
      $.parenthesized_operator
    ),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    extended_module_path: $ => choice(
      path($.extended_module_path, $._module_name),
      seq(
        $.extended_module_path,
        parenthesize($.extended_module_path)
      )
    ),

    module_type_path: $ => path($.extended_module_path, $._module_type_name),

    field_path: $ => path($.module_path, $._field_name),

    constructor_path: $ => path($.module_path, $._constructor_name),

    type_constructor_path: $ => prec(1, path($.extended_module_path, $._type_constructor)),

    _field_name: $ => alias($._identifier, $.field_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _constructor_name: $ => choice(
      alias($._capitalized_identifier, $.constructor_name),
      parenthesize(alias('::', $.constructor_name))
    ),

    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    directive: $ => seq('#', choice($._identifier, $._capitalized_identifier)),
    type_variable: $ => seq("'", choice($._identifier, $._capitalized_identifier)),
    tag: $ => seq('`', choice($._identifier, $._capitalized_identifier)),
